@@ -1,3 +1,7 @@
+2007-06-17  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* ButtonBase.cs, Thumb.cs: Removed *Internal properties.
+
 2007-06-16  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* TabPanel.cs: Fixed multiple row layout.
